--- a/cmake/templates/opencv_modules.hpp.in
+++ b/cmake/templates/opencv_modules.hpp.in
@@ -1,13 +1,12 @@
-/*
- *      ** File generated automatically, do not modify **
- *
- * This file defines the list of modules available in current build configuration
- *
- *
-*/
+// ** File generated automatically, do not modify **
+// This file defines the list of modules available in current build configuration
 
 // This definition means that OpenCV is built with enabled non-free code.
 // For example, patented algorithms for non-profit/non-commercial use only.
 #cmakedefine OPENCV_ENABLE_NONFREE
 
 @OPENCV_MODULE_DEFINITIONS_CONFIGMAKE@
+
+#ifdef OPENCV_PACKAGE_CONTRIB
+#include "opencv2/opencv_contrib_modules.hpp"
+#endif
