--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1463,27 +1463,19 @@ endif()
 if(BUILD_opencv_python2)
   status("")
   status("  Python 2:")
-  status("    Interpreter:"     PYTHON2INTERP_FOUND  THEN "${PYTHON2_EXECUTABLE} (ver ${PYTHON2_VERSION_STRING})"       ELSE NO)
-  if(PYTHON2LIBS_VERSION_STRING)
-    status("    Libraries:"   HAVE_opencv_python2  THEN  "${PYTHON2_LIBRARIES} (ver ${PYTHON2LIBS_VERSION_STRING})"   ELSE NO)
-  else()
-    status("    Libraries:"   HAVE_opencv_python2  THEN  "${PYTHON2_LIBRARIES}"                                      ELSE NO)
-  endif()
-  status("    numpy:"         PYTHON2_NUMPY_INCLUDE_DIRS THEN "${PYTHON2_NUMPY_INCLUDE_DIRS} (ver ${PYTHON2_NUMPY_VERSION})" ELSE "NO (Python wrappers can not be generated)")
-  status("    packages path:" PYTHON2_EXECUTABLE         THEN "${PYTHON2_PACKAGES_PATH}"                                    ELSE "-")
+  status("    Interpreter:"     Python2_Interpreter_FOUND  THEN "${Python2_EXECUTABLE} (ver ${Python2_VERSION})"       ELSE NO)
+  status("    Libraries:"   HAVE_opencv_python2  THEN  "${Python2_LIBRARIES}"                                      ELSE NO)
+  status("    numpy:"         Python2_NUMPY_INCLUDE_DIRS THEN "${Python2_NUMPY_INCLUDE_DIRS} (ver ${Python2_NUMPY_VERSION})" ELSE "NO (Python wrappers can not be generated)")
+  status("    packages path:" Python2_EXECUTABLE         THEN "${Python2_SITELIB}"                                    ELSE "-")
 endif()
 
 if(BUILD_opencv_python3)
   status("")
   status("  Python 3:")
-  status("    Interpreter:"     PYTHON3INTERP_FOUND  THEN "${PYTHON3_EXECUTABLE} (ver ${PYTHON3_VERSION_STRING})"       ELSE NO)
-  if(PYTHON3LIBS_VERSION_STRING)
-    status("    Libraries:"   HAVE_opencv_python3  THEN  "${PYTHON3_LIBRARIES} (ver ${PYTHON3LIBS_VERSION_STRING})"   ELSE NO)
-  else()
-    status("    Libraries:"   HAVE_opencv_python3  THEN  "${PYTHON3_LIBRARIES}"                                      ELSE NO)
-  endif()
-  status("    numpy:"         PYTHON3_NUMPY_INCLUDE_DIRS THEN "${PYTHON3_NUMPY_INCLUDE_DIRS} (ver ${PYTHON3_NUMPY_VERSION})" ELSE "NO (Python3 wrappers can not be generated)")
-  status("    packages path:" PYTHON3_EXECUTABLE         THEN "${PYTHON3_PACKAGES_PATH}"                                    ELSE "-")
+  status("    Interpreter:"     Python3_Interpreter_FOUND  THEN "${Python3_EXECUTABLE} (ver ${Python3_VERSION})"       ELSE NO)
+  status("    Libraries:"   HAVE_opencv_python3  THEN  "${Python3_LIBRARIES}"                                      ELSE NO)
+  status("    numpy:"         Python3_NUMPY_INCLUDE_DIRS THEN "${Python3_NUMPY_INCLUDE_DIRS} (ver ${Python3_NUMPY_VERSION})" ELSE "NO (Python3 wrappers can not be generated)")
+  status("    packages path:" Python3_EXECUTABLE         THEN "${Python3_SITELIB}"                                    ELSE "-")
 endif()
 
 status("")
