--- a/modules/python/python3/CMakeLists.txt
+++ b/modules/python/python3/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(NOT PYTHON3_INCLUDE_PATH OR NOT PYTHON3_NUMPY_INCLUDE_DIRS)
+if(NOT Python3_INCLUDE_DIRS OR NOT Python3_NUMPY_INCLUDE_DIRS)
   ocv_module_disable(python3)
 endif()
 
@@ -6,7 +6,7 @@ set(the_description "The python3 bindings")
 set(MODULE_NAME python3)
 set(MODULE_INSTALL_SUBDIR python3)
 
-set(PYTHON PYTHON3)
+set(PYTHON Python3)
 
 include(../common.cmake)
 
