GAPI (fluid): Sobel 3x3: separate *.cpp file w/SIMD code

--- a/modules/gapi/CMakeLists.txt
+++ b/modules/gapi/CMakeLists.txt
@@ -69,6 +69,7 @@ set(gapi_srcs
     src/backends/fluid/gfluidbuffer.cpp
     src/backends/fluid/gfluidbackend.cpp
     src/backends/fluid/gfluidimgproc.cpp
+    src/backends/fluid/gfluidimgproc_func.cpp
     src/backends/fluid/gfluidcore.cpp
 
     # GPU Backend (currently built-in)
