Changes to OpenCV-3.4 to support RTX64

--- a/cmake/templates/cvconfig.h.in
+++ b/cmake/templates/cvconfig.h.in
@@ -58,6 +58,9 @@
 /* NVIDIA CUDA Fast Fourier Transform (FFT) API*/
 #cmakedefine HAVE_CUFFT
 
+/* RTX64 capturing support */
+#cmakedefine HAVE_RTX64_GIGE
+
 /* IEEE1394 capturing support */
 #cmakedefine HAVE_DC1394
 
