--- a/3rdparty/openjpeg/CMakeLists.txt
+++ b/3rdparty/openjpeg/CMakeLists.txt
@@ -15,6 +15,7 @@ ocv_warnings_disable(CMAKE_C_FLAGS
     -Wimplicit-const-int-float-conversion  # clang
     -Wunused-but-set-variable # clang15
     -Wmissing-prototypes # clang, function opj_t1_ht_decode_cblk
+    -Wmissing-declarations # gcc, function opj_t1_ht_decode_cblk
 )
 
 #-----------------------------------------------------------------------------
