--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -322,7 +322,7 @@ OCV_OPTION(WITH_WEBP "Include WebP support" ON
 OCV_OPTION(WITH_OPENEXR "Include ILM support via OpenEXR" ((WIN32 OR ANDROID OR APPLE) OR BUILD_OPENEXR) OR NOT CMAKE_CROSSCOMPILING
   VISIBLE_IF NOT APPLE_FRAMEWORK AND NOT WINRT
   VERIFY HAVE_OPENEXR)
-OCV_OPTION(WITH_OPENGL "Include OpenGL support" OFF
+OCV_OPTION(WITH_OPENGL "Include OpenGL support" ON
   VISIBLE_IF NOT ANDROID AND NOT WINRT
   VERIFY HAVE_OPENGL)
 OCV_OPTION(WITH_OPENVX "Include OpenVX support" OFF
