--- a/modules/features2d/CMakeLists.txt
+++ b/modules/features2d/CMakeLists.txt
@@ -7,3 +7,5 @@ if(DEBUG_opencv_features2d)
   list(APPEND debug_modules opencv_highgui)
 endif()
 ocv_define_module(features2d opencv_imgproc ${debug_modules} OPTIONAL opencv_flann WRAP java objc python js)
+
+ocv_install_3rdparty_licenses(MSCR "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/MSCR/chi_table_LICENSE.txt")
