--- a/modules/features2d/CMakeLists.txt
+++ b/modules/features2d/CMakeLists.txt
@@ -8,4 +8,4 @@ if(DEBUG_opencv_features2d)
 endif()
 ocv_define_module(features2d opencv_imgproc ${debug_modules} OPTIONAL opencv_flann WRAP java objc python js)
 
-ocv_install_3rdparty_licenses(MSCR "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/MSCR/chi_table_LICENSE.txt")
+ocv_install_3rdparty_licenses(mscr "${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/mscr/chi_table_LICENSE.txt")
