update convert_scale.cpp and add CAROTENE_NEON_ARCH option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -908,7 +908,17 @@ foreach(hal ${OpenCV_HAL})
     if(";${CPU_BASELINE_FINAL};" MATCHES ";NEON;")
       add_subdirectory(3rdparty/carotene/hal)
       ocv_hal_register(CAROTENE_HAL_LIBRARIES CAROTENE_HAL_HEADERS CAROTENE_HAL_INCLUDE_DIRS)
-      list(APPEND OpenCV_USED_HAL "carotene (ver ${CAROTENE_HAL_VERSION})")
+
+      if( NOT DEFINED CAROTENE_NEON_ARCH)
+          set(CAROTENE_NEON_MSG "Auto")
+      elseif( CAROTENE_NEON_ARCH EQUAL 8)
+          set(CAROTENE_NEON_MSG "Force ARMv8")
+      elseif( CAROTENE_NEON_ARCH EQUAL 7)
+          set(CAROTENE_NEON_MSG "Force ARMv7")
+      else()
+          set(CAROTENE_NEON_MSG "Force ARMv7-Legacy")
+      endif()
+      list(APPEND OpenCV_USED_HAL "carotene (ver ${CAROTENE_HAL_VERSION}, ${CAROTENE_NEON_MSG})")
     else()
       message(STATUS "Carotene: NEON is not available, disabling carotene...")
     endif()
